// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerSkipLink (intern) ClickSkipLink play-test 1`] = `
<div data-test-block="true">
  <a href="main"
     class="_skipLink_qpdl0_1"
  >
    <span class="_skipLinkContent_qpdl0_19">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_qpdl0_42"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
  <main id="hovedinnhold"
        tabindex="-1"
  >
    Hovedinnholdet på siden
  </main>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <a href="main"
     class="_skipLink_qpdl0_1"
  >
    <span class="_skipLinkContent_qpdl0_19">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_qpdl0_42"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <a id="htmlId"
     href="main"
     class="_skipLink_qpdl0_1 dummyClassname"
     lang="nb"
     data-testid="123ID"
  >
    <span class="_skipLinkContent_qpdl0_19">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_qpdl0_42"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <a href="main"
     class="_skipLink_qpdl0_1"
     id="dummyIdForwardedFromRef"
  >
    <span class="_skipLinkContent_qpdl0_19">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_qpdl0_42"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) WithShadowDom play-test 1`] = `
<div data-test-block="true">
  <skiplink-customelement>
  </skiplink-customelement>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) WithTargetAndChildren play-test 1`] = `
<div data-test-block="true">
  <a href="#hovedinnhold"
     class="_skipLink_qpdl0_1"
  >
    <span class="_skipLinkContent_qpdl0_19">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_qpdl0_42"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Snarvei til hovedinnhold
    </span>
  </a>
  <main id="hovedinnhold"
        tabindex="-1"
  >
    Hovedinnholdet på siden
  </main>
</div>
`;
